# nanofeatures

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  README.md  THESIS.md  WRITEUP.md  phase0_derisk.py  pyproject.toml
nanofeatures/: calibrate.py  circuit.py  diag_edge_precision.py  edges.py  make_figure.py  model.py  repro.py  run_behavior.py  run_distributedness.py  run_edge_precision_compare.py  run_edges.py  run_equivalence.py  run_interactions.py  run_ioi.py  run_m1.py  run_m2.py  run_m3.py  run_m4.py  run_m5.py  run_m6.py  run_mechanism.py  run_model2.py  run_multihop.py  run_nsweep.py  run_posaware.py  run_precision_compare.py  run_scale.py  run_suite.py  task.py  tasks.py
reports/: m10_distributedness.json  m11_gpt2.json  m12_mechanism.json  m13_interactions.json  m14_edges.json  m14_edges_fdpos.json  m14_edges_gpt2.json  m16_width65k_ioi.json  m16_width65k_suite.json  m17_gemma9b.json  m17_gemma9b_fp32.json  m17_precision_compare.json  m18_edge_precision_diag.json  m18_edges_bf16.json  m18_edges_bf16_cpu.json  m18_edges_precision_compare.json  m18_fdpos_hgrid.json  m19_posaware.json  m1_feature_circuit.json  m20_equivalence.json  m21_nsweep.json  m22_multihop.json  m22_multihop_4_7_10.json  m2_baselines.json  m3_robustness.json  m4_antonyms.json  m5_bootstrap_ci.json  m6_strong_baselines.json  m7_suite.json  m7_suite_exact_L7.json  m8_ioi.json  m9_neuron_ioi.json  m9_neuron_suite.json  repro_manifest.json
tests/: test_core.py  test_suite.py
