[project]
name = "nanofeatures"
version = "0.1.0"
description = "Calibrated SAE-feature circuit discovery on Gemma-2-2B: does causal attribution beat the strongest cheap baseline?"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "sae-lens>=6.44.2,<7",
    "torch>=2.12.0,<3",
    "transformer-lens>=3.3.0,<4",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.9",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
